--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
   <head> <title> baka </title> </head>
   <body>
   <h1>b a k a </h1>
+    <p>
+      <img src="helenne.github.io/dollhands.jpg">
+    </p>
+    
   </body>
   
 </html>
