--- a/index.html
+++ b/index.html
@@ -14,10 +14,9 @@
 	</head>
 
   <body>
-  <h1>b a k a </h1>
-    <p>
-      <img src="helenne.github.io/dollhands.jpg">
-    </p>
+	  
+	  <p> b a k a </p>
+	  <img src="helenne.github.io/dollhands.jpg" />
     
   </body>
   
