--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
 	  <p> b a k a </p>
 	  <img src="helenne.github.io/dollhands.jpg" />
     
+	  
+	  <!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/main.js"></script>
+	  
   </body>
   
 </html>
