--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@ Senpai
 								<div class="content color0 span-3-75">
 									<h1 class="major"><!--[-->Aloha,<!--]--><br />
 									<!--[-->s ~ e ~ n ~ p ~ a ~ i<!--]--></h1>
-									<p><!--[-->This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)<!--]--></p>
+									<p><!--[--><h2>;)</h2><!--]--></p>
 									<ul class="actions">
 										<li><a href="https://pbs.twimg.com/profile_images/767820385475788801/yFuuPBta.jpg" class="button special color1 circle icon fa-angle-right">Next</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01.jpg" alt="" />
+									<img src="images/pic01.jpg" alt="A gift 4u" />
 								</div>
 							</section>
 						
