--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@ Senpai
 									<!--[-->s ~ e ~ n ~ p ~ a ~ i<!--]--></h1>
 									<p><!--[--><h2> ;) </h2><!--]--></p>
 									<ul class="actions">
-										<li><a href="https://pbs.twimg.com/profile_images/767820385475788801/yFuuPBta.jpg" class="button special color1 circle icon fa-angle-right">Next</a></li>
+										<li><a href="https://pbs.twimg.com/profile_images/767820385475788801/yFuuPBta.jpg" class="button special color1 circle icon fa-angle-right" alt="a Gift4u Big Boi" />A Gift 4u</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01.jpg" alt="A gift 4u" />
+									<img src="helenne.github.io/dollhands.jpg" alt="intimate" />
 								</div>
 							</section>
 						
