--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ Senpai
 -->
 <html>
 	<head>
-		<title>senpai Aloha</title>
+		<title>My Sweet Senpai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,9 +22,9 @@ Senpai
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major"><!--[-->Aloha,<!--]--><br />
+									<h1 class="major"><!--[-->ALOHA,<!--]--><br />
 									<!--[-->s ~ e ~ n ~ p ~ a ~ i<!--]--></h1>
-									<p><!--[--><h2> ;) </h2><!--]--></p>
+									<!--[--><h2> ;) </h2><!--]-->
 									<ul class="actions">
 										<li><a href="https://pbs.twimg.com/profile_images/767820385475788801/yFuuPBta.jpg" class="button special color1 circle icon fa-angle-right" alt="a Gift4u Big Boi" />A Gift 4u</a></li>
 									</ul>
