--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Senpai
 									<!--[-->s ~ e ~ n ~ p ~ a ~ i<!--]--></h1>
 									<!--[--><h2> ;) </h2><!--]-->
 									<ul class="actions">
-										<li><a href="https://pbs.twimg.com/profile_images/767820385475788801/yFuuPBta.jpg" class="button special color1 circle icon fa-angle-right" alt="a Gift4u Big Boi" />A Gift 4u</a></li>
+										<li><a href="https://helenne.github.io/hentai-senpai" class="button special color1 circle icon fa-angle-right" alt="a Gift4u Big Boi" />A Gift 4u</a></li>
 									</ul>
 								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
