--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ Senpai
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major"><!--[-->ALOHA,<!--]--><br />
+									<h1 class="major"><marquee behavior="scroll" direction="up" style="height:50px;">ALOHA,<br />
 									<!--[-->s ~ e ~ n ~ p ~ a ~ i<!--]--></h1>
 									<!--[--><h2> ;) </h2><!--]-->
 									<ul class="actions">
