--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ Senpai
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
 									<h1 class="major"><marquee behavior="scroll" direction="up" style="height:50px;">ALOHA,<br />
-									<!--[-->s ~ e ~ n ~ p ~ a ~ i<!--]--></h1>
+										<!--[-->s ~ e ~ n ~ p ~ a ~ i<!--]--> </h1> </marquee>
 									<!--[--><h2> ;) </h2><!--]-->
 									<ul class="actions">
 										<li><a href="https://helenne.github.io/hentai-senpai" class="button special color1 circle icon fa-angle-right" alt="a Gift4u Big Boi" />A Gift 4u</a></li>
